# module-1

./: .gitignore
Project/: AirT.cpp  AirT.h  Boots.cpp  Boots.h  Broom.cpp  Broom.h  CMakeLists.txt  Carpet.cpp  Carpet.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  GroundT.cpp  GroundT.h  Kamel.cpp  Kamel.h  Project.sln  Project.vcxproj  Venchil.cpp  Venchil.h  fKamel.cpp  fKamel.h  main.cpp
Project/Debug/: Project.exe.recipe  Project.ilk  Project.vcxproj.FileListAbsolute.txt  vc143.idb
Project/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
topic_1/1/: 1.sln  HW-1.1.vcxproj  HW-1.1.vcxproj.filters  Source.cpp  out.txt
topic_10/1/: CMakeLists.txt  Source1.cpp
topic_10/2/: CMakeLists.txt  Quadrilateral.cpp  Triangle.h  main.cpp
topic_11/1/: 1.sln  1.vcxproj  Greeter.cpp  Greeter.h
topic_11/2/: 2.sln  2.vcxproj  Leaver.h
topic_11/3/: CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
topic_11/Greeter_app/: Greeter_app.vcxproj  Source.cpp
topic_11/Leaver_app/: Leaver_app.vcxproj  Source.cpp
topic_2/1/: Project1.sln  Project1.vcxproj  Source.cpp
topic_2/2/: Project1.sln  Project1.vcxproj  Source.cpp
topic_2/3/: 3.sln  3.vcxproj  Source.cpp
topic_3/1/: 1.sln  1.vcxproj  Source.cpp
topic_3/2/: 2.sln  2.vcxproj  Source.cpp
topic_4/1/: 1.sln  1.vcxproj  Source.cpp
topic_4/2/: 2.sln  2.vcxproj  Source.cpp
topic_5/1/: 1.sln  1.vcxproj  Source.cpp
topic_5/2/: 2.sln  2.vcxproj  Source.cpp
topic_5/3/: 3.sln  3.vcxproj  Source.cpp
(+86 files in other folders)
